# Polylla-Unified

./: .gitignore  CMakeLists.txt  README.md  analytics.py  generate_kernel.py  invert_faces.py  main.cpp  smooth_experiments.ipynb  utils.py
src/: CMakeLists.txt  archivos.MD  kernel.cu  m_edge_ratio.hpp  measure.hpp  polylla.cu  polylla.hpp  polylla_gpu.hpp  triangulation.cu  triangulation.hpp
src/GPolylla/: gpolylla_wrapper.hpp  kernel.cu  polylla.cu  triangulation.cu
test/: run_tests.sh
test/test_files/: pikachu.1.ele  pikachu.1.neigh  pikachu.1.node  pikachu_poly.poly  pikachu_regiones.1.ele  pikachu_regiones.1.neigh  pikachu_regiones.1.node  pikachu_regiones_poly.poly
